# animal-shelter-analytics

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/.ruff_cache/0.15.1/: 4241841549893922114  7704737351290780270
backend/app/: main.py
backend/tests/: test_main.py
notebooks/: 01_eda.ipynb  02_eda_cats.ipynb  03_eda_dogs.ipynb
scripts/: fetch_data.py
