[tool.poetry]
name = "shelter-analytics-backend"
version = "0.1.0"
description = "Backend API for shelter analytics platform"
authors = ["Priscilla Miller <cilspythonista@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
httpx = "^0.28.0"
python-multipart = "^0.0.20"
anthropic = "^0.43.0"
sqlalchemy = "^2.0.0"
pyodbc = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.8.0"
jupyter = "^1.1.1"
pandas = "^3.0.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
scikit-learn = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
